# bearparse

./: .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yaml
bearparse/: __init__.py  parsers.py
docs/: api.rst  conf.py  requirements.txt
docs/source/: guide.rst  index.rst
tests/: test_argparse.py  test_parser.py  test_parsers.py
