[tool.poetry]
name = "bearparse"
version = "0.3.2"
description = "A custom argument parser for non-standard arguments. Useful for Appworx"
authors = ["Zevaryx <zevaryx@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://git.zevaryx.com/zevaryx/bearparse"

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^21.2.0"
PyYAML = "^5.4.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
enum-tools = "^0.6.4"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
